removed all padding

--- a/Resume.html
+++ b/Resume.html
@@ -6,8 +6,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<style type="text/css">
-		h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5{
+		h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6{
 			margin-top:0px;
+			margin-bottom: 0px;
 		}
 
 		h1{
@@ -32,7 +33,6 @@
 			font-family: 'Roboto', sans-serif;
 			font-weight: 400;
 			font-size: 18pt;
-			margin-top:30px;
 		}
 
 		h5{
@@ -51,12 +51,9 @@
 			font-family: 'Roboto', sans-serif;
 			font-weight: 300;
 			font-size:12pt;
-			display: block;
-			padding-top: 5px;
 		}
 
 		.content{
-			padding-top: 40px;
 		}
 
 		.bar{
