added right section border

--- a/Resume.html
+++ b/Resume.html
@@ -27,6 +27,7 @@
 			font-family: 'Roboto', sans-serif;
 			font-weight: 700;
 			font-size: 24pt;
+			margin-top: 20px;
 		}
 
 		h4{
@@ -45,12 +46,19 @@
 			font-family: 'Roboto', sans-serif;
 			font-weight: 300;
 			font-size: 12pt;
+			margin-top: 5px;
+		}
+
+		span{
+			display:block;
+			margin-bottom: 5px;
 		}
 
 		.text {
 			font-family: 'Roboto', sans-serif;
 			font-weight: 300;
 			font-size:12pt;
+			display:block;
 		}
 
 		.content{
@@ -59,7 +67,7 @@
 		.bar{
 			height: 22px;
 			background-color: #aeaeae;
-			margin-top: 5px;
+			margin-top: 1px;
 			padding-left: 3px;
 		}
 
@@ -79,6 +87,24 @@
 		.small-top-margin{
 			margin-top: 10px;
 		}
+
+		.header{
+			background-color: #aeaeae;
+			padding-top: 20px;
+			padding-bottom: 20px;
+			color: #ffffff;
+			border-bottom-right-radius: 3px;
+			border-bottom-left-radius: 3px;
+		}
+
+		.right-section{
+			border-left: 1px solid #aeaeae;
+			padding-bottom:5px;
+		}
+
+		.page{
+			margin-top:10px;
+		}
 	</style>
 </head>
 <body>
@@ -88,7 +114,7 @@
 				<h1>Nael Alismail</h1>
 				<h2>Software Architect & Team Builder</h2>
 			</div>
-			<div id="contact" class="col-lg-4 col-lg-offset-1">
+			<div id="contact" class="col-lg-5 right-section">
 					<h6>nael@naelalismail.com</h6>
 					<h6>205 253 1385</h6>
 					<h6>Github</h6>
@@ -96,39 +122,38 @@
 			</div>
 		</div>
 		<div id="content" class="content col-lg-8 col-lg-offset-2">
-			<div id="left" class="col-lg-7">
-				<div class="text"></div>
+			<div id="left" class="col-lg-7 text">
 				<h3>Experience</h3>
 				<h4>Application Architect / Manager of Atlanta</h4>
 				<h5 class="col-lg-7 shift-left">AppRiver</h5>
 				<h5 class="col-lg-4 col-lg-offset-1 text-right">7/2008 - Present</h5>
-				<span class="text">Designed and developed APIs for synchronous and asynchronous communication</span>
-				<span class="text">Wrote automated system and unit tests</span>
-				<span class="text">Relied on dependency injection to decouple architecture and support testing</span>
-				<span class="text">Automated deployments</span>
-				<span class="text">Led a team of developers to build provisioning features for SaaS products</span>
-				<span class="text">Recruited, built and led a remote development team</span>
-				<span class="text">Mentored and performed quarterly reviews for a team of developers</span>
-				<span class="text">Led an effort to implement agile principles across the department</span>
-				<span class="text">Led team as a SCRUM master for costing, planning, demo, and retrospectives </span>
-				<span class="text">Developed intranet web site for CRM, billing, and support tools</span>
-				<span class="text">Built and managed video intranet site for developer training</span>
-				<span class="text">Created training training videos on technical topics and in-house technology</span>
+				<span>Designed and developed APIs for synchronous and asynchronous communication</span>
+				<span>Wrote automated system and unit tests</span>
+				<span>Relied on dependency injection to decouple architecture and support testing</span>
+				<span>Automated deployments</span>
+				<span>Led a team of developers to build provisioning features for SaaS products</span>
+				<span>Recruited, built and led a remote development team</span>
+				<span>Mentored and performed quarterly reviews for a team of developers</span>
+				<span>Led an effort to implement agile principles across the department</span>
+				<span>Led team as a SCRUM master for costing, planning, demo, and retrospectives </span>
+				<span>Developed intranet web site for CRM, billing, and support tools</span>
+				<span>Built and managed video intranet site for developer training</span>
+				<span>Created training training videos on technical topics and in-house technology</span>
 				<h4>Application Developer</h4>
 				<h5 class="col-lg-7 shift-left">NFP</h5>
 				<h5 class="col-lg-4 col-lg-offset-1 text-right">7/2006 - 6/2008</h5>
-				<span class="text">Created an HTTP module to redirect users based on user&#39;s state</span>
-				<span class="text">Developed a single sign on solution</span>
-				<span class="text">Unified and exposed data across multiple data sources through a web service</span>
+				<span>Created an HTTP module to redirect users based on user&#39;s state</span>
+				<span>Developed a single sign on solution</span>
+				<span>Unified and exposed data across multiple data sources through a web service</span>
 				<h4>Programmer Analyst</h4>
 				<h5 class="col-lg-7 shift-left">Sungard Employee Benefit Systems</h5>
 				<h5 class="col-lg-4 col-lg-offset-1 text-right">6/2004 - 8/2006</h5>
-				<span class="text">Maintained and enhanced retirement and 401k web software</span>
-				<span class="text">Converted web application from .NET 1.1 to .NET 2.0</span>
-				<span class="text">Developed customer service representative application to manage customer data</span>
+				<span>Maintained and enhanced retirement and 401k web software</span>
+				<span>Converted web application from .NET 1.1 to .NET 2.0</span>
+				<span>Developed customer service representative application to manage customer data</span>
 
 			</div>
-			<div id="right" class="col-lg-4 col-lg-offset-1">
+			<div id="right" class="col-lg-5 right-section">
 				<h3>Technical Skills</h3>
 				<div class="bar-text">
 					<div class="bar" style="width:90%">C#</div>
