moved date to topline with title

--- a/Resume.html
+++ b/Resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<style type="text/css">
@@ -18,32 +18,32 @@
 		}
 
 		h2{
-			font-family: 'Roboto', sans-serif;
+			font-family: 'Roboto Condensed', sans-serif;
 			font-weight: 300;
-			font-size: 16pt;
+			font-size: 19pt;
 		}
 
 		h3{
-			font-family: 'Roboto', sans-serif;
-			font-weight: 700;
+			font-family: 'Oswald', sans-serif;
+			font-weight: 300;
 			font-size: 24pt;
-			margin-top: 20px;
+			margin-top:20px;
 		}
 
 		h4{
-			font-family: 'Roboto', sans-serif;
+			font-family: 'Roboto Condensed', sans-serif;
 			font-weight: 400;
-			font-size: 18pt;
+			font-size: 15pt;
 		}
 
 		h5{
-			font-family: 'Roboto', sans-serif;
-			font-weight: 400;
+			font-family: 'Roboto Condensed', sans-serif;
+			font-weight: 300;
 			font-size: 14pt;
 		}
 
 		h6{
-			font-family: 'Roboto', sans-serif;
+			font-family: 'Roboto Condensed', sans-serif;
 			font-weight: 300;
 			font-size: 12pt;
 			margin-top: 5px;
@@ -88,6 +88,10 @@
 			margin-top: 10px;
 		}
 
+		.large-top-margin{
+			margin-top:25px;
+		}
+
 		.header{
 			background-color: #aeaeae;
 			padding-top: 20px;
@@ -99,7 +103,7 @@
 
 		.right-section{
 			border-left: 1px solid #aeaeae;
-			padding-bottom:5px;
+			padding-bottom:10px;
 		}
 
 		.page{
@@ -116,7 +120,6 @@
 			</div>
 			<div id="contact" class="col-lg-5 right-section">
 					<h6>nael@naelalismail.com</h6>
-					<h6>205 253 1385</h6>
 					<h6>Github</h6>
 					<h6>LinkedIn</h6>
 			</div>
@@ -124,29 +127,33 @@
 		<div id="content" class="content col-lg-8 col-lg-offset-2">
 			<div id="left" class="col-lg-7 text">
 				<h3>Experience</h3>
-				<h4>Application Architect / Manager of Atlanta</h4>
-				<h5 class="col-lg-7 shift-left">AppRiver</h5>
-				<h5 class="col-lg-4 col-lg-offset-1 text-right">7/2008 - Present</h5>
-				<span>Designed and developed APIs for synchronous and asynchronous communication</span>
-				<span>Wrote automated system and unit tests</span>
-				<span>Relied on dependency injection to decouple architecture and support testing</span>
-				<span>Automated deployments</span>
-				<span>Led a team of developers to build provisioning features for SaaS products</span>
-				<span>Recruited, built and led a remote development team</span>
-				<span>Mentored and performed quarterly reviews for a team of developers</span>
-				<span>Led an effort to implement agile principles across the department</span>
-				<span>Led team as a SCRUM master for costing, planning, demo, and retrospectives </span>
-				<span>Developed intranet web site for CRM, billing, and support tools</span>
-				<span>Built and managed video intranet site for developer training</span>
-				<span>Created training training videos on technical topics and in-house technology</span>
-				<h4>Application Developer</h4>
+				<div class="large-top-margin col-lg-12 shift-left">
+					<h4 class="col-lg-9 shift-left">Application Architect | Manager of Atlanta Development</h4>
+					<h5 class="col-lg-3 text-right">7/2008-Present</h5>
+				</div>
+				<h5 class="col-lg-12 shift-left">AppRiver</h5>
+				<div>
+					<span>Designed and developed APIs for synchronous and asynchronous communication</span>
+					<span>Wrote automated system and unit tests</span>
+					<span>Relied on dependency injection to decouple architecture and support testing</span>
+					<span>Automated deployments</span>
+					<span>Led a team of developers to build provisioning features for SaaS products</span>
+					<span>Recruited, built and led a remote development team</span>
+					<span>Mentored and performed quarterly reviews for a team of developers</span>
+					<span>Led an effort to implement agile principles across the department</span>
+					<span>Led team as a SCRUM master for costing, planning, demo, and retrospectives </span>
+					<span>Developed intranet web site for CRM, billing, and support tools</span>
+					<span>Built and managed video intranet site for developer training</span>
+					<span>Created training training videos on technical topics and in-house technology</span>
+				</div>
+				<h4 class="large-top-margin">Application Developer</h4>
 				<h5 class="col-lg-7 shift-left">NFP</h5>
 				<h5 class="col-lg-4 col-lg-offset-1 text-right">7/2006 - 6/2008</h5>
 				<span>Created an HTTP module to redirect users based on user&#39;s state</span>
 				<span>Developed a single sign on solution</span>
 				<span>Unified and exposed data across multiple data sources through a web service</span>
-				<h4>Programmer Analyst</h4>
-				<h5 class="col-lg-7 shift-left">Sungard Employee Benefit Systems</h5>
+				<h4 class="large-top-margin">Programmer Analyst</h4>
+				<h5 class="col-lg-7 shift-left">Sungard</h5>
 				<h5 class="col-lg-4 col-lg-offset-1 text-right">6/2004 - 8/2006</h5>
 				<span>Maintained and enhanced retirement and 401k web software</span>
 				<span>Converted web application from .NET 1.1 to .NET 2.0</span>
