--- a/Resume.html
+++ b/Resume.html
@@ -84,6 +84,10 @@
 			padding-left: 0px;
 		}
 
+		.shift-right{
+			padding-right: 0px;
+		}
+
 		.small-top-margin{
 			margin-top: 10px;
 		}
@@ -109,6 +113,7 @@
 		.page{
 			margin-top:10px;
 		}
+
 	</style>
 </head>
 <body>
@@ -127,12 +132,12 @@
 		<div id="content" class="content col-lg-8 col-lg-offset-2">
 			<div id="left" class="col-lg-7 text">
 				<h3>Experience</h3>
-				<div class="large-top-margin col-lg-12 shift-left">
-					<h4 class="col-lg-9 shift-left">Application Architect | Manager of Atlanta Development</h4>
-					<h5 class="col-lg-3 text-right">7/2008-Present</h5>
+				<h5 class="large-top-margin col-lg-12 shift-left">AppRiver</h5>
+				<div class="col-lg-12 shift-left">
+					<h4 class="col-lg-8 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
+					<h4 class="col-lg-4 text-right">7/2008-Present</h4>
 				</div>
-				<h5 class="col-lg-12 shift-left">AppRiver</h5>
-				<div>
+				<div class="col-lg-12 small-top-margin">
 					<span>Designed and developed APIs for synchronous and asynchronous communication</span>
 					<span>Wrote automated system and unit tests</span>
 					<span>Relied on dependency injection to decouple architecture and support testing</span>
@@ -146,18 +151,31 @@
 					<span>Built and managed video intranet site for developer training</span>
 					<span>Created training training videos on technical topics and in-house technology</span>
 				</div>
-				<h4 class="large-top-margin">Application Developer</h4>
-				<h5 class="col-lg-7 shift-left">NFP</h5>
-				<h5 class="col-lg-4 col-lg-offset-1 text-right">7/2006 - 6/2008</h5>
-				<span>Created an HTTP module to redirect users based on user&#39;s state</span>
-				<span>Developed a single sign on solution</span>
-				<span>Unified and exposed data across multiple data sources through a web service</span>
-				<h4 class="large-top-margin">Programmer Analyst</h4>
-				<h5 class="col-lg-7 shift-left">Sungard</h5>
-				<h5 class="col-lg-4 col-lg-offset-1 text-right">6/2004 - 8/2006</h5>
-				<span>Maintained and enhanced retirement and 401k web software</span>
-				<span>Converted web application from .NET 1.1 to .NET 2.0</span>
-				<span>Developed customer service representative application to manage customer data</span>
+
+				<h5 class="large-top-margin col-lg-12 shift-left">NFP</h5>
+				<div class="col-lg-12 shift-left">
+					<h4 class="col-lg-8 text-nowrap shift-left">Application Developer</h4>
+					<h4 class="col-lg-4 text-right">7/2006 - 6/2008</h4>
+				</div>
+				<div class="col-lg-12 small-top-margin">
+					<span>Created an HTTP module to redirect users based on user&#39;s state</span>
+					<span>Developed a single sign on solution</span>
+					<span>Unified and exposed data across multiple data sources through a web service</span>
+				</div>
+				
+				<h5 class="large-top-margin col-lg-12 shift-left">Sungard</h5>
+				<div class="col-lg-12 shift-left">
+					<h4 class="col-lg-8 text-nowrap shift-left">Programmer Analyst</h4>
+					<h4 class="col-lg-4 text-right">6/2004 - 8/2006</h4>
+				</div>
+				<div class="col-lg-12 small-top-margin">
+					<span>Maintained and enhanced retirement and 401k web software</span>
+					<span>Converted web application from .NET 1.1 to .NET 2.0</span>
+					<span>Developed customer service representative application to manage customer data</span>
+				</div>
+
+
+				
 
 			</div>
 			<div id="right" class="col-lg-5 right-section">
