added skills axis and fixed education section

--- a/Resume.html
+++ b/Resume.html
@@ -61,6 +61,13 @@
 			display:block;
 		}
 
+		.bold-text {
+			font-family: 'Roboto', sans-serif;
+			font-weight: 400;
+			font-size:12pt;
+			display:block;
+		}
+
 		.content{
 		}
 
@@ -196,27 +203,31 @@
 					<div class="bar" style="width:20%">Education</div>
 					<div class="bar" style="width:70%">Communication</div>
 				</div>
-				<h3>Education</h3>
+				<div class="col-lg-12 small-top-margin text shift-left" style="border-top: 1px solid #aeaeae;">
+					<div class="col-lg-4">OK</div>
+					<div class="col-lg-4 text-center shift-left">Good</div>
+					<div class="col-lg-4 text-right">Great</div>
+				</div>
+				<h3 class="col-lg-12 shift-left large-top-margin">Education</h3>
 				<div class="small-top-margin col-lg-12 shift-left text">
-					<h5 class="col-lg-2 shift-left bold-text">2014</h5>
-					<h5 class="col-lg-9 col-lg-offset-1 shift-left bold-text">University of West Florida</h5>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">Master's Degree</div>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">Software Engineering</div>
+					<div class="col-lg-2 shift-left bold-text">2014</div>
+					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">MS Software Engineering</div>
+					<div class="col-lg-9 col-lg-offset-3 shift-left">University of West Florida</div>
 				</div>
 				<div class="small-top-margin col-lg-12 shift-left text">
-					<h5 class="col-lg-2 shift-left bold-text">2014</h5>
-					<h5 class="col-lg-9 col-lg-offset-1 shift-left bold-text">Scrum Training</h5>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">Certified Scrum Master</div>
+					<div class="col-lg-2 shift-left bold-text">2014</div>
+					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">Certified Scrum Master</div>
+					<div class="col-lg-9 col-lg-offset-3 shift-left">Scrum Training</div>
 				</div>
 				<div class="small-top-margin col-lg-12 shift-left text">
-					<h5 class="col-lg-2 shift-left bold-text">2013</h5>
-					<h5 class="col-lg-9 col-lg-offset-1 shift-left bold-text">Leadership Training</h5>
+					<div class="col-lg-2 shift-left bold-text">2013</div>
+					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">Leadership Training</div>
 					<div class="col-lg-9 col-lg-offset-3 shift-left">12 Week One-on-One Program</div>
 				</div>
 				<div class="small-top-margin col-lg-12 shift-left text">
-					<h5 class="col-lg-2 shift-left bold-text">2004</h5>
-					<h5 class="col-lg-9 col-lg-offset-1 shift-left bold-text">University of West Florida</h5>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">Bachelor of Science in MIS</div>
+					<div class="col-lg-2 shift-left bold-text">2004</div>
+					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">BS Management Information Systems</div>
+					<div class="col-lg-9 col-lg-offset-3 shift-left">University of West Florida</div>
 				</div>
 			</div>
 		</div>
