--- a/Resume.html
+++ b/Resume.html
@@ -5,229 +5,177 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-	<style type="text/css">
-		h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6{
-			margin-top:0px;
-			margin-bottom: 0px;
-		}
-
+	<link href="resume.css" rel="stylesheet">
+</head>
+<style>
+	@media print{
 		h1{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 400;
-			font-size: 48pt;
+			font-size: 36pt;
 		}
-
+		
 		h2{
-			font-family: 'Roboto Condensed', sans-serif;
-			font-weight: 300;
-			font-size: 19pt;
+			font-size: 16pt;
 		}
 
 		h3{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 300;
-			font-size: 24pt;
-			margin-top:20px;
+			font-size: 18pt;
+			margin-top: 10px;
 		}
 
 		h4{
-			font-family: 'Roboto Condensed', sans-serif;
-			font-weight: 400;
-			font-size: 15pt;
+			font-size: 10pt;
 		}
 
 		h5{
-			font-family: 'Roboto Condensed', sans-serif;
-			font-weight: 300;
-			font-size: 14pt;
+			font-size: 9pt;
 		}
 
 		h6{
-			font-family: 'Roboto Condensed', sans-serif;
-			font-weight: 300;
-			font-size: 15pt;
-			margin-top: 10px;
-		}
-
-		span{
-			display:block;
-			margin-bottom: 5px;
-		}
-
-		.text {
-			font-family: 'Roboto', sans-serif;
-			font-weight: 300;
-			font-size:12pt;
-			display:block;
-		}
-
-		.bold-text {
-			font-family: 'Roboto', sans-serif;
-			font-weight: 400;
-			font-size:12pt;
-			display:block;
-		}
-
-		.content{
-		}
-
-		.bar{
-			height: 22px;
-			background-color: #aeaeae;
-			margin-top: 1px;
-			padding-left: 3px;
-		}
-
-		.bar-text{
-			color: #ffffff;
-			font-family: 'Roboto', sans-serif;
-			font-weight: 400;
-			font-size:12pt;
-			display: block;
-			padding-top: 5px;
-		}
-
-		.shift-left{
-			padding-left: 0px;
-		}
-
-		.shift-right{
-			padding-right: 0px;
-		}
-
-		.small-top-margin{
-			margin-top: 10px;
-		}
-
-		.large-top-margin{
-			margin-top:25px;
-		}
-
-		.header{
-			background-color: #aeaeae;
-			padding-top: 20px;
-			padding-bottom: 20px;
-			color: #ffffff;
-			border-bottom-right-radius: 3px;
-			border-bottom-left-radius: 3px;
-		}
-
-		.right-section{
-			border-left: 1px solid #aeaeae;
-			padding-bottom:10px;
+			font-size: 8pt;
 		}
 
 		.page{
-			margin-top:10px;
+			margin-top: 0px;
 		}
 
-	</style>
-</head>
+		.header{
+			padding-top: 0px;
+		}
+
+		.text{
+			font-size: 8pt;
+		}
+
+		.bold-text{
+			font-size: 8pt;
+		}
+
+		.bar-text{
+			font-size:7pt;
+			font-weight: 300;
+			padding-top:0px;
+			color: #aeaeae;
+			-webkit-print-color-adjust: exact;
+			print-color-adjust: exact;
+		}
+
+		.bar{
+			height:14px;
+			border: 1px solid #aeaeae;
+		}
+
+		.large-top-margin{
+			margin-top:30px;
+		}
+
+	}
+</style>
 <body>
 	<div id="resume" class="page container-fluid">
-		<div id="header" class="col-lg-8 col-lg-offset-2">
-			<div id="nael" class="col-lg-7">
+		<div id="header" class="col-lg-8 col-lg-offset-2 col-xs-12">
+			<div id="nael" class="col-lg-7 col-xs-8">
 				<h1>Nael Alismail</h1>
 				<h2>Software Architect & Team Builder</h2>
 			</div>
-			<div id="contact" class="col-lg-5 right-section">
+			<div id="contact" class="col-lg-5 right-section col-xs-4">
 					<h6>nael@naelalismail.com</h6>
 					<h6>https://github.com/maestroh</h6>
 					<h6>https://www.linkedin.com/pub/nael-alismail/92/6b/120</h6>
 			</div>
 		</div>
-		<div id="content" class="content col-lg-8 col-lg-offset-2">
-			<div id="left" class="col-lg-7 text">
+		<div id="content" class="content col-lg-8 col-lg-offset-2 col-xs-12">
+			<div id="left" class="col-lg-7 col-xs-8 text">
 				<h3>Experience</h3>
-				<h5 class="large-top-margin col-lg-12 shift-left">AppRiver</h5>
-				<div class="col-lg-12 shift-left">
-					<h4 class="col-lg-8 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
-					<h4 class="col-lg-4 text-right">7/2008-Present</h4>
+				<h5 class="small-top-margin col-lg-12 col-xs-12 shift-left">AppRiver</h5>
+				<div class="col-lg-12 col-xs-12 shift-left">
+					<h4 class="col-lg-8 col-xs-8 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
+					<h4 class="col-lg-4 col-xs-4 text-right">7/2008-Present</h4>
 				</div>
-				<div class="col-lg-12 small-top-margin">
-					<span>Designed and developed APIs for synchronous and asynchronous communication</span>
-					<span>Wrote automated system and unit tests</span>
-					<span>Relied on dependency injection to decouple architecture and support testing</span>
-					<span>Automated deployments</span>
-					<span>Led a team of developers to build provisioning features for SaaS products</span>
+				<div class="col-lg-12 col-xs-12 small-top-margin">
+					<span>Led multiple teams to build provisioning features for SaaS products</span>
 					<span>Recruited, built and led a remote development team</span>
-					<span>Mentored and performed quarterly reviews for a team of developers</span>
+					<span>Mentored and performed quarterly reviews for many developers</span>
 					<span>Led an effort to implement agile principles across the department</span>
-					<span>Led team as a SCRUM master for costing, planning, demo, and retrospectives </span>
+					<span>Acted as SCRUM master for costing, planning, demo, and retrospectives </span>
+					<span class="medium-top-margin">Designed and developed synchronous and async APIs</span>
+					<span>Wrote automated system and unit tests</span>
+					<span>Used dependency injection to decouple architecture and support testing</span>
+					<span>Automated deployments</span>
 					<span>Developed intranet web site for CRM, billing, and support tools</span>
 					<span>Built and managed video intranet site for developer training</span>
-					<span>Created training training videos on technical topics and in-house technology</span>
+					<span>Created training videos on technical topics and in-house technology</span>
 				</div>
-				<h5 class="large-top-margin col-lg-12 shift-left">NFP</h5>
-				<div class="col-lg-12 shift-left">
-					<h4 class="col-lg-8 text-nowrap shift-left">Application Developer</h4>
-					<h4 class="col-lg-4 text-right">7/2006 - 6/2008</h4>
+				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">NFP</h5>
+				<div class="col-lg-12 col-xs-12 shift-left">
+					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Application Developer</h4>
+					<h4 class="col-lg-4 col-xs-5 text-right">7/2006 - 6/2008</h4>
 				</div>
-				<div class="col-lg-12 small-top-margin">
+				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Created an HTTP module to redirect users based on user&#39;s state</span>
 					<span>Developed a single sign on solution</span>
-					<span>Unified and exposed data across multiple data sources through a web service</span>
+					<span>Unified data across multiple data sources through a web service</span>
 				</div>
-				<h5 class="large-top-margin col-lg-12 shift-left">Sungard</h5>
-				<div class="col-lg-12 shift-left">
-					<h4 class="col-lg-8 text-nowrap shift-left">Programmer Analyst</h4>
-					<h4 class="col-lg-4 text-right">6/2004 - 8/2006</h4>
+				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">Sungard</h5>
+				<div class="col-lg-12 col-xs-12 shift-left">
+					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Programmer Analyst</h4>
+					<h4 class="col-lg-4 col-xs-5 text-right">6/2004 - 8/2006</h4>
 				</div>
-				<div class="col-lg-12 small-top-margin">
+				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Maintained and enhanced retirement and 401k web software</span>
 					<span>Converted web application from .NET 1.1 to .NET 2.0</span>
-					<span>Developed customer service representative application to manage customer data</span>
+					<span>Developed customer service representative application </span>
 				</div>
 			</div>
-			<div id="right" class="col-lg-5 right-section">
+			<div id="right" class="col-lg-5 col-xs-4 right-section">
 				<h3>Technical Skills</h3>
 				<div class="bar-text">
 					<div class="bar" style="width:90%">C#</div>
 					<div class="bar" style="width:45%">Git</div>
 					<div class="bar" style="width:60%">Angular</div>
-					<div class="bar" style="width:20%">Node</div>
-					<div class="bar" style="width:70%">LINQ</div>
-					<div class="bar" style="width:70%">WCF</div>
-					<div class="bar" style="width:70%">WebAPI</div>
-					<div class="bar" style="width:70%">Automated Testing</div>
-					<div class="bar" style="width:70%">Automated Deployments</div>
+					<div class="bar" style="width:30%">Node</div>
+					<div class="bar" style="width:85%">LINQ</div>
+					<div class="bar" style="width:80%">WCF</div>
+					<div class="bar" style="width:50%">WebAPI</div>
+					<div class="bar" style="width:90%">Automated Testing</div>
+					<div class="bar" style="width:90%">Automated Deployments</div>
 					<div class="bar" style="width:70%">Web Development</div>
-					<div class="bar" style="width:70%">SQL</div>
+					<div class="bar" style="width:80%">SOLID Principles</div>
+					<div class="bar" style="width:50%">SQL</div>
 				</div>
 				<h3>Professional Skills</h3>
 				<div class="bar-text">
 					<div class="bar" style="width:90%">Problem Solving</div>
-					<div class="bar" style="width:45%">Leadership</div>
-					<div class="bar" style="width:70%">Team Building</div>
-					<div class="bar" style="width:60%">Scrum</div>
-					<div class="bar" style="width:20%">Education</div>
-					<div class="bar" style="width:70%">Communication</div>
+					<div class="bar" style="width:60%">Leadership</div>
+					<div class="bar" style="width:85%">Team Building</div>
+					<div class="bar" style="width:90%">Scrum</div>
+					<div class="bar" style="width:70%">Education</div>
+					<div class="bar" style="width:90%">Communication</div>
 				</div>
-				<div class="col-lg-12 small-top-margin text shift-left" style="border-top: 1px solid #aeaeae;">
-					<div class="col-lg-4">OK</div>
-					<div class="col-lg-4 text-center shift-left">Good</div>
-					<div class="col-lg-4 text-right">Great</div>
+				<div class="col-lg-12 col-xs-12 small-top-margin text shift-left" style="border-top: 1px solid #aeaeae;">
+					<div class="col-lg-4 col-xs-4">OK</div>
+					<div class="col-lg-4 col-xs-4 text-center shift-left">Good</div>
+					<div class="col-lg-4 col-xs-4 text-right">Great</div>
 				</div>
-				<h3 class="col-lg-12 shift-left large-top-margin">Education</h3>
-				<div class="small-top-margin col-lg-12 shift-left text">
-					<div class="col-lg-2 shift-left bold-text">2014</div>
-					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">MS Software Engineering</div>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">University of West Florida</div>
+				<h3 class="col-lg-12 col-xs-12 shift-left medium-top-margin">Education</h3>
+				<div class="small-top-margin col-lg-12 col-xs-12 shift-left text">
+					<div class="col-lg-2 col-xs-2 shift-left bold-text">2014</div>
+					<div class="col-lg-9 col-lg-offset-1 col-xs-9 col-xs-offset-1 shift-left bold-text text-nowrap">MS Software Engineering</div>
+					<div class="col-lg-9 col-lg-offset-3 col-xs-9 col-xs-offset-3 shift-left text-nowrap">University of West Florida</div>
 				</div>
-				<div class="small-top-margin col-lg-12 shift-left text">
-					<div class="col-lg-2 shift-left bold-text">2014</div>
-					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">Certified Scrum Master</div>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">Scrum Training</div>
+				<div class="small-top-margin col-lg-12 col-xs-12 shift-left text">
+					<div class="col-lg-2 col-xs-2 shift-left bold-text">2014</div>
+					<div class="col-lg-9 col-lg-offset-1 col-xs-9 col-xs-offset-1 shift-left bold-text text-nowrap">Certified Scrum Master</div>
+					<div class="col-lg-9 col-lg-offset-3 col-xs-9 col-xs-offset-3 shift-left text-nowrap">Scrum Training</div>
 				</div>
-				<div class="small-top-margin col-lg-12 shift-left text">
-					<div class="col-lg-2 shift-left bold-text">2013</div>
-					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">Leadership Training</div>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">12 Week One-on-One Program</div>
+				<div class="small-top-margin col-lg-12 col-xs-12 shift-left text">
+					<div class="col-lg-2 col-xs-2 shift-left bold-text">2013</div>
+					<div class="col-lg-9 col-lg-offset-1 col-xs-9 col-xs-offset-1 shift-left bold-text text-nowrap">Leadership Training</div>
+					<div class="col-lg-9 col-lg-offset-3 col-xs-9 col-xs-offset-3 shift-left text-nowrap">12 Week One-on-One Program</div>
 				</div>
-				<div class="small-top-margin col-lg-12 shift-left text">
-					<div class="col-lg-2 shift-left bold-text">2004</div>
-					<div class="col-lg-9 col-lg-offset-1 shift-left bold-text">BS Management Information Systems</div>
-					<div class="col-lg-9 col-lg-offset-3 shift-left">University of West Florida</div>
+				<div class="small-top-margin col-lg-12 col-xs-12 shift-left text">
+					<div class="col-lg-2 col-xs-2 shift-left bold-text">2004</div>
+					<div class="col-lg-9 col-lg-offset-1 col-xs-9 col-xs-offset-1 shift-left bold-text text-nowrap">BS in MIS</div>
+					<div class="col-lg-9 col-lg-offset-3 col-xs-9 col-xs-offset-3 shift-left text-nowrap">UAB</div>
 				</div>
 			</div>
 		</div>
