changed header font

--- a/Resume.html
+++ b/Resume.html
@@ -10,7 +10,7 @@
 <style>
 	@media print{
 		h1{
-			font-size: 36pt;
+			font-size: 40pt;
 		}
 		
 		h2{
@@ -23,19 +23,19 @@
 		}
 
 		h4{
-			font-size: 10pt;
+			font-size: 11pt;
 		}
 
 		h5{
-			font-size: 9pt;
+			font-size: 10pt;
 		}
 
 		h6{
-			font-size: 8pt;
+			font-size: 10pt;
 		}
 
 		.page{
-			margin-top: 0px;
+			margin-top: 30px;
 		}
 
 		.header{
@@ -43,24 +43,22 @@
 		}
 
 		.text{
-			font-size: 8pt;
+			font-size: 9pt;
 		}
 
 		.bold-text{
-			font-size: 8pt;
+			font-size: 9pt;
 		}
 
 		.bar-text{
-			font-size:7pt;
+			font-size:8pt;
 			font-weight: 300;
-			padding-top:0px;
-			color: #aeaeae;
-			-webkit-print-color-adjust: exact;
-			print-color-adjust: exact;
+			color: #aeaeae !important;
+      -webkit-print-color-adjust: exact;
 		}
 
 		.bar{
-			height:14px;
+			height:18px;
 			border: 1px solid #aeaeae;
 		}
 
@@ -80,7 +78,7 @@
 			<div id="contact" class="col-lg-5 right-section col-xs-4">
 					<h6>nael@naelalismail.com</h6>
 					<h6>https://github.com/maestroh</h6>
-					<h6>https://www.linkedin.com/pub/nael-alismail/92/6b/120</h6>
+					<h6>https://www.linkedin.com/in/naelalismail</h6>
 			</div>
 		</div>
 		<div id="content" class="content col-lg-8 col-lg-offset-2 col-xs-12">
@@ -88,8 +86,8 @@
 				<h3>Experience</h3>
 				<h5 class="small-top-margin col-lg-12 col-xs-12 shift-left">AppRiver</h5>
 				<div class="col-lg-12 col-xs-12 shift-left">
-					<h4 class="col-lg-8 col-xs-8 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
-					<h4 class="col-lg-4 col-xs-4 text-right">7/2008-Present</h4>
+					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
+					<h4 class="col-lg-4 col-xs-5 text-right shift-right">7/2008-Present</h4>
 				</div>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Led multiple teams to build provisioning features for SaaS products</span>
@@ -108,7 +106,7 @@
 				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">NFP</h5>
 				<div class="col-lg-12 col-xs-12 shift-left">
 					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Application Developer</h4>
-					<h4 class="col-lg-4 col-xs-5 text-right">7/2006 - 6/2008</h4>
+					<h4 class="col-lg-4 col-xs-5 text-right shift-right">7/2006 - 6/2008</h4>
 				</div>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Created an HTTP module to redirect users based on user&#39;s state</span>
@@ -118,7 +116,7 @@
 				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">Sungard</h5>
 				<div class="col-lg-12 col-xs-12 shift-left">
 					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Programmer Analyst</h4>
-					<h4 class="col-lg-4 col-xs-5 text-right">6/2004 - 8/2006</h4>
+					<h4 class="col-lg-4 col-xs-5 text-right shift-right">6/2004 - 8/2006</h4>
 				</div>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Maintained and enhanced retirement and 401k web software</span>
