--- a/Resume.html
+++ b/Resume.html
@@ -10,11 +10,11 @@
 <style>
 	@media print{
 		h1{
-			font-size: 40pt;
+			font-size: 42pt;
 		}
 		
 		h2{
-			font-size: 16pt;
+			font-size: 18pt;
 		}
 
 		h3{
@@ -23,15 +23,17 @@
 		}
 
 		h4{
-			font-size: 11pt;
+			font-size: 13pt;
 		}
 
 		h5{
-			font-size: 10pt;
+			font-size: 12pt;
 		}
 
 		h6{
 			font-size: 10pt;
+			margin-top: 0px;
+			margin-bottom: 19px;
 		}
 
 		.page{
@@ -60,10 +62,11 @@
 		.bar{
 			height:18px;
 			border: 1px solid #aeaeae;
+			margin-top: 2px;
 		}
 
 		.large-top-margin{
-			margin-top:30px;
+			margin-top: 35px;
 		}
 
 	}
@@ -84,40 +87,40 @@
 		<div id="content" class="content col-lg-8 col-lg-offset-2 col-xs-12">
 			<div id="left" class="col-lg-7 col-xs-8 text">
 				<h3>Experience</h3>
-				<h5 class="small-top-margin col-lg-12 col-xs-12 shift-left">AppRiver</h5>
-				<div class="col-lg-12 col-xs-12 shift-left">
-					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Application Architect | Manager of Atlanta Development</h4>
-					<h4 class="col-lg-4 col-xs-5 text-right shift-right">7/2008-Present</h4>
+				<div class="col-lg-12 col-xs-12 shift-left medium-top-margin">
+					<h5 class="col-lg-8 col-xs-7 shift-left">AppRiver</h5>
+					<h5 class="col-lg-4 col-xs-5 text-right shift-right">7/2008-Present</h5>
 				</div>
+				<h4 class="col-lg-12 col-xs-12 shift-left small-top-margin">Application Architect | Manager of Atlanta Development</h4>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Led multiple teams to build provisioning features for SaaS products</span>
 					<span>Recruited, built and led a remote development team</span>
 					<span>Mentored and performed quarterly reviews for many developers</span>
 					<span>Led an effort to implement agile principles across the department</span>
-					<span>Acted as SCRUM master for costing, planning, demo, and retrospectives </span>
-					<span class="medium-top-margin">Designed and developed synchronous and async APIs</span>
-					<span>Wrote automated system and unit tests</span>
-					<span>Used dependency injection to decouple architecture and support testing</span>
+					<span>Acted as Scrum Master for costing, demo, and retrospectives </span>
+					<span>Designed and developed synchronous and async APIs</span>
+					<span>Wrote automated end to end tests and unit tests</span>
+					<span>Used dependency injection to decouple architecture</span>
 					<span>Automated deployments</span>
 					<span>Developed intranet web site for CRM, billing, and support tools</span>
 					<span>Built and managed video intranet site for developer training</span>
 					<span>Created training videos on technical topics and in-house technology</span>
 				</div>
-				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">NFP</h5>
-				<div class="col-lg-12 col-xs-12 shift-left">
-					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Application Developer</h4>
-					<h4 class="col-lg-4 col-xs-5 text-right shift-right">7/2006 - 6/2008</h4>
+				<div class="col-lg-12 col-xs-12 shift-left medium-top-margin">
+					<h5 class="col-lg-8 col-xs-7 shift-left">NFP</h5>
+					<h5 class="col-lg-4 col-xs-5 text-right shift-right">7/2006 - 6/2008</h5>
 				</div>
+				<h4 class="col-lg-12 col-xs-12 shift-left small-top-margin">Application Developer</h4>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Created an HTTP module to redirect users based on user&#39;s state</span>
 					<span>Developed a single sign on solution</span>
 					<span>Unified data across multiple data sources through a web service</span>
 				</div>
-				<h5 class="large-top-margin col-lg-12 col-xs-12 shift-left">Sungard</h5>
-				<div class="col-lg-12 col-xs-12 shift-left">
-					<h4 class="col-lg-8 col-xs-7 text-nowrap shift-left">Programmer Analyst</h4>
-					<h4 class="col-lg-4 col-xs-5 text-right shift-right">6/2004 - 8/2006</h4>
+				<div class="col-lg-12 col-xs-12 shift-left medium-top-margin">
+					<h5 class="col-lg-8 col-xs-7 shift-left">Sungard</h5>
+					<h5 class="col-lg-4 col-xs-5 text-right shift-right">6/2004 - 8/2006</h5>
 				</div>
+				<h4 class="col-lg-12 col-xs-12 shift-left small-top-margin">Programmer Analyst</h4>
 				<div class="col-lg-12 col-xs-12 small-top-margin">
 					<span>Maintained and enhanced retirement and 401k web software</span>
 					<span>Converted web application from .NET 1.1 to .NET 2.0</span>
@@ -126,7 +129,7 @@
 			</div>
 			<div id="right" class="col-lg-5 col-xs-4 right-section">
 				<h3>Technical Skills</h3>
-				<div class="bar-text">
+				<div class="bar-text medium-top-margin">
 					<div class="bar" style="width:90%">C#</div>
 					<div class="bar" style="width:45%">Git</div>
 					<div class="bar" style="width:60%">Angular</div>
@@ -140,8 +143,8 @@
 					<div class="bar" style="width:80%">SOLID Principles</div>
 					<div class="bar" style="width:50%">SQL</div>
 				</div>
-				<h3>Professional Skills</h3>
-				<div class="bar-text">
+				<h3 class="medium-top-margin">Professional Skills</h3>
+				<div class="bar-text medium-top-margin">
 					<div class="bar" style="width:90%">Problem Solving</div>
 					<div class="bar" style="width:60%">Leadership</div>
 					<div class="bar" style="width:85%">Team Building</div>
@@ -150,12 +153,12 @@
 					<div class="bar" style="width:90%">Communication</div>
 				</div>
 				<div class="col-lg-12 col-xs-12 small-top-margin text shift-left" style="border-top: 1px solid #aeaeae;">
-					<div class="col-lg-4 col-xs-4">OK</div>
+					<div class="col-lg-4 col-xs-4 shift-left">OK</div>
 					<div class="col-lg-4 col-xs-4 text-center shift-left">Good</div>
-					<div class="col-lg-4 col-xs-4 text-right">Great</div>
+					<div class="col-lg-4 col-xs-4 text-right shift-right">Great</div>
 				</div>
 				<h3 class="col-lg-12 col-xs-12 shift-left medium-top-margin">Education</h3>
-				<div class="small-top-margin col-lg-12 col-xs-12 shift-left text">
+				<div class="medium-top-margin col-lg-12 col-xs-12 shift-left text">
 					<div class="col-lg-2 col-xs-2 shift-left bold-text">2014</div>
 					<div class="col-lg-9 col-lg-offset-1 col-xs-9 col-xs-offset-1 shift-left bold-text text-nowrap">MS Software Engineering</div>
 					<div class="col-lg-9 col-lg-offset-3 col-xs-9 col-xs-offset-3 shift-left text-nowrap">University of West Florida</div>
