first version of landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello Nurse!
+<!DOCTYPE html>
+<html>
+<head>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="resume.css" rel="stylesheet">
+	<style>
+		.header-border{
+			height: 40px;
+			border-top: 5px solid #aeaeae;
+			border-bottom: 5px solid #aeaeae;
+		}
+
+		h3{
+			display: inline;
+		}
+
+		.large-bottom-padding{
+			padding-bottom: 200px
+		}
+	</style>
+</head>
+<body class="container-fluid">
+	<div class="large-bottom-padding row">
+		<div class="col-lg-3 header-border medium-top-margin">
+		</div>
+		<h1 class="col-lg-2">
+			&#60;Nael&#47;&#62;
+		</h1>
+		<div class="col-lg-4 medium-top-margin">
+			<h3 style="padding-right: 150px;">blog</h3>
+			<h3 style="padding-right: 150px;">resume</h3>
+			<h3>github</h3>
+		</div>
+		<div class="col-lg-3 header-border medium-top-margin">
+		</div>
+	</div>
+	<div class="row large-bottom-padding">
+		<div class="col-lg-2 col-lg-offset-3">
+			<h3>
+				architect
+			</h3>
+			<div class="text">
+				Passionate architect with a philosophy of progress and experimentation.
+			</div>
+		</div>
+		<div class="col-lg-2 col-lg-offset-2">
+			<h3>
+				leader
+			</h3>
+			<div class="text">
+				Focusing team energy through training, collaboration, participation and inspiration.
+			</div>
+		</div>
+	</div>
+	<div class="row" style="border-top: 1px solid #aeaeae">
+		<h6 class="col-lg-1 col-lg-offset-3">nael@naelalismail.com</h6>
+		<h6 class="col-lg-1 col-lg-offset-1">https://github.com/maestroh</h6>
+		<h6 class="col-lg-1 col-lg-offset-1">https://www.linkedin.com/in/naelalismail</h6>
+	</div>
+</body>
+</html>
