--- a/index.html
+++ b/index.html
@@ -3,61 +3,139 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Teko:600' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-	<link href="resume.css" rel="stylesheet">
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<style>
-		.header-border{
-			height: 40px;
-			border-top: 5px solid #aeaeae;
-			border-bottom: 5px solid #aeaeae;
+		.header{
+			padding-top: 10px;
+			padding-bottom: 20px;
 		}
 
-		h3{
-			display: inline;
+		.header h2{
+			font-family: 'Oswald', sans-serif;
+			font-weight: 300;
+			font-size:35px;
+			font-size: 2.12em;
+			text-align: center;
 		}
 
-		.large-bottom-padding{
-			padding-bottom: 200px
+		.header h2:hover{
+			content:'hello';
+		}
+
+		.jumbotron h1{
+			font-family: 'Teko', sans-serif;
+			font-size: 100px;
+			font-size: 7em;
+			margin-bottom: 0px;
+		}
+
+		.jumbotron h2{
+			font-family: 'Oswald', sans-serif;
+			font-weight: 300;
+			font-size:35px;
+			font-size: 2.9em;
+			margin-top: 0px;
+		}
+
+		.jumbotron{
+			padding-top: 72px;
+			padding-bottom: 72px;
+			margin-bottom: 100px;
+		}
+
+		.marketing{
+			margin-bottom: 60px;
+		}
+
+		.marketing .col-lg-4{
+			margin-bottom: 20px;
+			text-align: center;
+		}
+
+		.marketing .col-lg-4 h3{
+			font-family: 'Oswald', sans-serif;
+			font-weight: 400;
+			font-size: 30px;
+			font-size: 2.5em;
+		}
+
+		.marketing .col-lg-4 p{
+			font-family: 'Oswald', sans-serif;
+			font-weight: 300;
+			font-size: 20px;
+			font-size: 2em;
+			margin-right: 10px;
+			margin-left: 10px;
+		}
+
+		.marketing .col-lg-4 i{
+			font-size: 20px;
+			font-size: 6em;
+		}
+
+		.footer h4{
+			font-family: 'Oswald', sans-serif;
+			font-weight: 400;
+			font-size: 20px;
+			font-size: 1.5em;
+			text-align: center;
+		}
+
+		.footer i{
+			font-size: 2em;
 		}
 	</style>
 </head>
-<body class="container-fluid">
-	<div class="large-bottom-padding row">
-		<div class="col-lg-3 header-border medium-top-margin">
-		</div>
-		<h1 class="col-lg-2">
-			&#60;Nael&#47;&#62;
-		</h1>
-		<div class="col-lg-4 medium-top-margin">
-			<h3 style="padding-right: 150px;">blog</h3>
-			<h3 style="padding-right: 150px;">resume</h3>
-			<h3>github</h3>
-		</div>
-		<div class="col-lg-3 header-border medium-top-margin">
+<body>
+	<div class="row header">
+		<h2 class="col-lg-2 col-lg-offset-1" title="blog"><a href="http://nael.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i> blog</a></h2>
+		<h2 class="col-lg-2"><a href="Resume.html" target="_blank"><i class="fa fa-file-text-o"></i> resume</a></h2>
+		<h2 class="col-lg-2"><a href="https://github.com/maestroh" target="_blank"><i class="fa fa-github"></i> github</a></h2>
+		<h2 class="col-lg-2"><a href="https://www.linkedin.com/in/naelalismail" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a></h2>
+		<h2 class="col-lg-3"><a href="mailto:nael@naelalismail.com"><i class="fa fa-envelope-o"></i> nael@naelalismail.com</a></h2>
+	</div>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>
+				Nael Alismail
+			</h1>
+			<h2>
+				software architect | team builder
+			</h2>
 		</div>
 	</div>
-	<div class="row large-bottom-padding">
-		<div class="col-lg-2 col-lg-offset-3">
-			<h3>
-				architect
-			</h3>
-			<div class="text">
-				Passionate architect with a philosophy of progress and experimentation.
+	<div class="container marketing">
+		<div class="row">
+			<div class="col-lg-4">
+				<i class="fa fa-cogs"></i>
+				<h3>
+					architect
+				</h3>
+				<p>
+					Passionate architect with a philosophy of progress and experimentation.
+				</p>
+			</div>
+			<div class="col-lg-4">
+				<i class="fa fa-users"></i>
+				<h3>
+					leader
+				</h3>
+				<p>
+					Focusing team energy through training, collaboration, participation and inspiration. mentoring
+				</p>
+			</div>
+			<div class="col-lg-4">
+				<i class="fa fa-book"></i> 
+				<h3>
+					trainer
+				</h3>
+				<p>
+					Focusing team energy through training, collaboration, participation and inspiration.
+				</p>
 			</div>
 		</div>
-		<div class="col-lg-2 col-lg-offset-2">
-			<h3>
-				leader
-			</h3>
-			<div class="text">
-				Focusing team energy through training, collaboration, participation and inspiration.
-			</div>
-		</div>
-	</div>
-	<div class="row" style="border-top: 1px solid #aeaeae">
-		<h6 class="col-lg-1 col-lg-offset-3">nael@naelalismail.com</h6>
-		<h6 class="col-lg-1 col-lg-offset-1">https://github.com/maestroh</h6>
-		<h6 class="col-lg-1 col-lg-offset-1">https://www.linkedin.com/in/naelalismail</h6>
 	</div>
 </body>
 </html>
