cleaned up description

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					architect
 				</h3>
 				<p>
-					Passionate architect with a philosophy of progress and experimentation.
+					Energetic, problem solving architect who considers testing, delivery, maintainability, deployment, and customer acceptance when designing applications.
 				</p>
 			</div>
 			<div class="col-lg-4">
@@ -123,7 +123,7 @@
 					leader
 				</h3>
 				<p>
-					Focusing team energy through training, collaboration, participation and inspiration. mentoring
+					Passionate leader with a philosophy of continued progress who focuses team energy through collaboration, participation and inspiration.
 				</p>
 			</div>
 			<div class="col-lg-4">
@@ -132,7 +132,7 @@
 					trainer
 				</h3>
 				<p>
-					Focusing team energy through training, collaboration, participation and inspiration.
+					Educated developer with a strong desire to improve those within the team giving everyone the best chance to deliver the best product possible.
 				</p>
 			</div>
 		</div>
