--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Teko:600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<style>
+
+		a {
+			color: #FC7F00;
+		}
+
+		a:hover{
+			color: #FA9C04;
+		}
+
+		a:hover, a:visited, a:link, a:active
+		{
+		  text-decoration: none;
+		}
+
 		.header{
 			padding-top: 10px;
 			padding-bottom: 20px;
@@ -20,15 +36,13 @@
 			text-align: center;
 		}
 
-		.header h2:hover{
-			content:'hello';
-		}
-
 		.jumbotron h1{
-			font-family: 'Teko', sans-serif;
-			font-size: 100px;
-			font-size: 7em;
-			margin-bottom: 0px;
+			font-family: 'Alfa Slab One', cursive;
+			font-size: 75px;
+			font-size: 4em;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			color: #FFFF00;
 		}
 
 		.jumbotron h2{
@@ -37,16 +51,27 @@
 			font-size:35px;
 			font-size: 2.9em;
 			margin-top: 0px;
+			color: #FFFF00;
 		}
 
 		.jumbotron{
 			padding-top: 72px;
 			padding-bottom: 72px;
 			margin-bottom: 100px;
+			background-color: #515151;
+		}
+
+		.jumbotron .stripe{
+			margin-left: -30px;
+			margin-right: -30px;
+			background-color: #FC7F00;
+			border-top: 5px solid #FFFF00;
+			border-bottom: 5px solid #FFFF00;
 		}
 
 		.marketing{
 			margin-bottom: 60px;
+			color: #515151;
 		}
 
 		.marketing .col-lg-4{
@@ -73,6 +98,7 @@
 		.marketing .col-lg-4 i{
 			font-size: 20px;
 			font-size: 6em;
+			color: #FC7F00;
 		}
 
 		.footer h4{
@@ -97,10 +123,14 @@
 		<h2 class="col-lg-3"><a href="mailto:nael@naelalismail.com"><i class="fa fa-envelope-o"></i> nael@naelalismail.com</a></h2>
 	</div>
 	<div class="jumbotron">
+		<div class="stripe">
+			<div class="container">
+				<h1>
+					Nael Alismail
+				</h1>
+			</div>
+		</div>
 		<div class="container">
-			<h1>
-				Nael Alismail
-			</h1>
 			<h2>
 				software architect | team builder
 			</h2>
