--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					trainer
 				</h3>
 				<p>
-					Educated developer with a strong desire to improve those within the team giving everyone the best chance to deliver the best product possible.
+					Educated developer with a strong desire to improve those within the team giving everyone the best chance to deliver the best product.
 				</p>
 			</div>
 		</div>
