--- a/index.html
+++ b/index.html
@@ -5,111 +5,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-	<style>
-
-		a {
-			color: #FC7F00;
-		}
-
-		a:hover{
-			color: #FA9C04;
-		}
-
-		a:hover, a:visited, a:link, a:active
-		{
-		  text-decoration: none;
-		}
-
-		.header{
-			padding-top: 10px;
-			padding-bottom: 20px;
-		}
-
-		.header h2{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 300;
-			font-size:35px;
-			font-size: 2.12em;
-			text-align: center;
-		}
-
-		.jumbotron h1{
-			font-family: 'Alfa Slab One', cursive;
-			font-size: 75px;
-			font-size: 4em;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			color: #FFFF00;
-		}
-
-		.jumbotron h2{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 300;
-			font-size:35px;
-			font-size: 2.9em;
-			margin-top: 0px;
-			color: #FFFF00;
-		}
-
-		.jumbotron{
-			padding-top: 72px;
-			padding-bottom: 72px;
-			margin-bottom: 100px;
-			background-color: #515151;
-		}
-
-		.jumbotron .stripe{
-			margin-left: -30px;
-			margin-right: -30px;
-			background-color: #FC7F00;
-			border-top: 5px solid #FFFF00;
-			border-bottom: 5px solid #FFFF00;
-		}
-
-		.marketing{
-			margin-bottom: 60px;
-			color: #515151;
-		}
-
-		.marketing .col-lg-4{
-			margin-bottom: 20px;
-			text-align: center;
-		}
-
-		.marketing .col-lg-4 h3{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 400;
-			font-size: 30px;
-			font-size: 2.5em;
-		}
-
-		.marketing .col-lg-4 p{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 300;
-			font-size: 20px;
-			font-size: 2em;
-			margin-right: 10px;
-			margin-left: 10px;
-		}
-
-		.marketing .col-lg-4 i{
-			font-size: 20px;
-			font-size: 6em;
-			color: #FC7F00;
-		}
-
-		.footer h4{
-			font-family: 'Oswald', sans-serif;
-			font-weight: 400;
-			font-size: 20px;
-			font-size: 1.5em;
-			text-align: center;
-		}
-
-		.footer i{
-			font-size: 2em;
-		}
-	</style>
+	<link href="index.css" rel="stylesheet">
 </head>
 <body>
 	<div class="row header">
