--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="row header">
 		<h2 class="col-lg-2 col-lg-offset-1" title="blog"><a href="http://nael.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i> blog</a></h2>
-		<h2 class="col-lg-2"><a href="Resume.html" target="_blank"><i class="fa fa-file-text-o"></i> resume</a></h2>
+		<h2 class="col-lg-2"><a href="resume.pdf" target="_blank"><i class="fa fa-file-text-o"></i> resume</a></h2>
 		<h2 class="col-lg-2"><a href="https://github.com/maestroh" target="_blank"><i class="fa fa-github"></i> github</a></h2>
 		<h2 class="col-lg-2"><a href="https://www.linkedin.com/in/naelalismail" target="_blank"><i class="fa fa-linkedin"></i> linkedin</a></h2>
 		<h2 class="col-lg-3"><a href="mailto:nael@naelalismail.com"><i class="fa fa-envelope-o"></i> nael@naelalismail.com</a></h2>
